tests/paczka1/fuzzy1/11912775.err
Error in line 7: wPZ A2)1 113,6
Error in line 9: cJAs A662 48,75
Error in line 6: nSo S28 10,6
Error in line 17: nSo A662 765,1
Error in line 19: S28 S28 12,7
Error in line 22: S28 A662 23,8
Error in line 30: 9Z0O A674 89,9
